public class Client {
    private String name;
    private String mail;
    private String address;
    public void Client(String name, String mail, String address) {
        // TODO: Implementar el método
    }
    public String getName() {
        // TODO: Implementar el método
    }
    public String getMail() {
        // TODO: Implementar el método
    }
    public String getAddress() {
        // TODO: Implementar el método
    }
    public void setName(String name) {
        // TODO: Implementar el método
    }
    public void setMail(String mail) {
        // TODO: Implementar el método
    }
    public void setAddress(String address) {
        // TODO: Implementar el método
    }
    public String toString() {
        // TODO: Implementar el método
    }
}
